--- a/X68KeplerX.qsf
+++ b/X68KeplerX.qsf
@@ -364,7 +364,6 @@ set_location_assignment PIN_M10 -to pGPIO1[28]
 set_location_assignment PIN_L13 -to pGPIO1[29]
 set_location_assignment PIN_J16 -to pGPIO1[30]
 set_location_assignment PIN_K15 -to pGPIO1[31]
-set_location_assignment PIN_J13 -to pGPIO1[32]
 set_location_assignment PIN_J14 -to pGPIO1[33]
 set_location_assignment PIN_T9 -to pGPIO1_IN[0]
 set_location_assignment PIN_R9 -to pGPIO1_IN[1]
@@ -380,7 +379,8 @@ set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name VHDL_FILE RTL/X68KeplerX.vhd
 set_global_assignment -name SDC_FILE X68KeplerX.SDC
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name QIP_FILE RTL/mainpll.qip
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
