--- a/X68KeplerX.qsf
+++ b/X68KeplerX.qsf
@@ -469,41 +469,6 @@ set_instance_assignment -name POST_FIT_CONNECT_TO_SLD_NODE_ENTITY_PORT crc[0] -t
 set_instance_assignment -name POST_FIT_CONNECT_TO_SLD_NODE_ENTITY_PORT crc[4] -to auto_signaltap_0|vcc -section_id auto_signaltap_0
 set_instance_assignment -name POST_FIT_CONNECT_TO_SLD_NODE_ENTITY_PORT crc[9] -to auto_signaltap_0|vcc -section_id auto_signaltap_0
 set_instance_assignment -name POST_FIT_CONNECT_TO_SLD_NODE_ENTITY_PORT crc[17] -to auto_signaltap_0|gnd -section_id auto_signaltap_0
-set_global_assignment -name VHDL_FILE RTL/i2s_encoder.vhd
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/filter/jt51_sincf.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/filter/jt51_interpol.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/filter/jt51_fir8.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/filter/jt51_fir4.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/filter/jt51_fir_ram.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/filter/jt51_fir.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/filter/jt51_dac2.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_timers.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_sh.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_reg.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_pm.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_phrom.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_phinc_rom.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_pg.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_op.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_noise_lfsr.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_noise.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_mod.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_mmr.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_lin2exp.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_lfo.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_kon.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_exprom.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_exp2lin.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_eg.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_csr_op.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_csr_ch.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_acc.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51.v
-set_global_assignment -name VHDL_FILE RTL/OPM_JT51.vhd
-set_global_assignment -name VHDL_FILE RTL/X68KeplerX.vhd
-set_global_assignment -name SDC_FILE X68KeplerX.SDC
-set_global_assignment -name QIP_FILE RTL/mainpll.qip
-set_global_assignment -name SIGNALTAP_FILE stp1.stp
 set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_trigger_in[28] -to bus_state.BS_S_DBOUT -section_id auto_signaltap_0
 set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_trigger_in[29] -to bus_state.BS_S_DBOUT_P -section_id auto_signaltap_0
 set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_trigger_in[30] -to i_rw -section_id auto_signaltap_0
@@ -635,5 +600,44 @@ set_global_assignment -name SLD_NODE_PARAMETER_ASSIGNMENT "SLD_STORAGE_QUALIFIER
 set_instance_assignment -name POST_FIT_CONNECT_TO_SLD_NODE_ENTITY_PORT crc[10] -to auto_signaltap_0|vcc -section_id auto_signaltap_0
 set_instance_assignment -name POST_FIT_CONNECT_TO_SLD_NODE_ENTITY_PORT crc[14] -to auto_signaltap_0|gnd -section_id auto_signaltap_0
 set_global_assignment -name SLD_NODE_PARAMETER_ASSIGNMENT "SLD_ADVANCED_TRIGGER_ENTITY=sld_reserved_X68KeplerX_auto_signaltap_0_1_80ae," -section_id auto_signaltap_0
+set_global_assignment -name VHDL_FILE RTL/peripheral/e8255.vhd
+set_global_assignment -name VHDL_FILE RTL/ym2151/OPM_JT51.vhd
+set_global_assignment -name QIP_FILE RTL/adpcm/tbl6258.qip
+set_global_assignment -name VHDL_FILE RTL/adpcm/e6258.vhd
+set_global_assignment -name VHDL_FILE RTL/adpcm/calcadpcm.vhd
+set_global_assignment -name VHDL_FILE RTL/i2s_encoder.vhd
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/filter/jt51_sincf.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/filter/jt51_interpol.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/filter/jt51_fir8.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/filter/jt51_fir4.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/filter/jt51_fir_ram.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/filter/jt51_fir.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/filter/jt51_dac2.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_timers.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_sh.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_reg.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_pm.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_phrom.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_phinc_rom.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_pg.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_op.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_noise_lfsr.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_noise.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_mod.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_mmr.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_lin2exp.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_lfo.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_kon.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_exprom.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_exp2lin.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_eg.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_csr_op.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_csr_ch.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_acc.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51.v
+set_global_assignment -name VHDL_FILE RTL/X68KeplerX.vhd
+set_global_assignment -name SDC_FILE X68KeplerX.SDC
+set_global_assignment -name QIP_FILE RTL/mainpll.qip
+set_global_assignment -name SIGNALTAP_FILE stp1.stp
 set_global_assignment -name SLD_FILE db/stp1_auto_stripped.stp
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
