--- a/X68KeplerX.qsf
+++ b/X68KeplerX.qsf
@@ -21,7 +21,6 @@ set_global_assignment -name RESERVE_DCLK_AFTER_CONFIGURATION "USE AS REGULAR IO"
 # CLOCK
 #============================================================
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to pClk50M
-set_location_assignment PIN_R8 -to pCLOCK_50
 
 #============================================================
 # LED
@@ -220,28 +219,6 @@ set_location_assignment PIN_M16 -to pGPIO_2_IN[2]
 #============================================================
 # GPIO_0, GPIO_0 connect to GPIO Default
 #============================================================
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to pGPIO0[0]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to pGPIO0[1]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to pGPIO0[2]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to pGPIO0[3]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to pGPIO0[4]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to pGPIO0[5]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to pGPIO0[6]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to pGPIO0[7]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to pGPIO0[8]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to pGPIO0[9]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to pGPIO0[10]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to pGPIO0[11]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to pGPIO0[12]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to pGPIO0[13]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to pGPIO0[14]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to pGPIO0[15]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to pGPIO0[16]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to pGPIO0[17]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to pGPIO0[18]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to pGPIO0[19]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to pGPIO0[20]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to pGPIO0[21]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to pGPIO0[22]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to pGPIO0[23]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to pGPIO0[24]
@@ -254,20 +231,6 @@ set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to pGPIO0[30]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to pGPIO0[31]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to pGPIO0[32]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to pGPIO0[33]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to pGPIO0_IN[0]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to pGPIO0_IN[1]
-set_location_assignment PIN_D3 -to pGPIO0[0]
-set_location_assignment PIN_C3 -to pGPIO0[1]
-set_location_assignment PIN_A2 -to pGPIO0[2]
-set_location_assignment PIN_A3 -to pGPIO0[3]
-set_location_assignment PIN_B3 -to pGPIO0[4]
-set_location_assignment PIN_B4 -to pGPIO0[5]
-set_location_assignment PIN_A4 -to pGPIO0[6]
-set_location_assignment PIN_B5 -to pGPIO0[7]
-set_location_assignment PIN_A5 -to pGPIO0[8]
-set_location_assignment PIN_D5 -to pGPIO0[9]
-set_location_assignment PIN_B6 -to pGPIO0[10]
-set_location_assignment PIN_A6 -to pGPIO0[11]
 set_location_assignment PIN_B7 -to pGPIO0[12]
 set_location_assignment PIN_D6 -to pGPIO0[13]
 set_location_assignment PIN_A7 -to pGPIO0[14]
@@ -415,46 +378,6 @@ set_instance_assignment -name POST_FIT_CONNECT_TO_SLD_NODE_ENTITY_PORT crc[18] -
 set_global_assignment -name SLD_NODE_PARAMETER_ASSIGNMENT "SLD_SEGMENT_SIZE=256" -section_id auto_signaltap_0
 set_global_assignment -name SLD_NODE_PARAMETER_ASSIGNMENT "SLD_SAMPLE_DEPTH=256" -section_id auto_signaltap_0
 set_instance_assignment -name POST_FIT_CONNECT_TO_SLD_NODE_ENTITY_PORT crc[10] -to auto_signaltap_0|vcc -section_id auto_signaltap_0
-set_global_assignment -name VHDL_FILE RTL/addsat.vhd
-set_global_assignment -name VHDL_FILE RTL/peripheral/e8255.vhd
-set_global_assignment -name VHDL_FILE RTL/ym2151/OPM_JT51.vhd
-set_global_assignment -name QIP_FILE RTL/adpcm/tbl6258.qip
-set_global_assignment -name VHDL_FILE RTL/adpcm/e6258.vhd
-set_global_assignment -name VHDL_FILE RTL/adpcm/calcadpcm.vhd
-set_global_assignment -name VHDL_FILE RTL/i2s_encoder.vhd
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/filter/jt51_sincf.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/filter/jt51_interpol.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/filter/jt51_fir8.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/filter/jt51_fir4.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/filter/jt51_fir_ram.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/filter/jt51_fir.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/filter/jt51_dac2.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_timers.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_sh.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_reg.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_pm.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_phrom.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_phinc_rom.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_pg.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_op.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_noise_lfsr.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_noise.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_mod.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_mmr.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_lin2exp.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_lfo.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_kon.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_exprom.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_exp2lin.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_eg.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_csr_op.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_csr_ch.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_acc.v
-set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51.v
-set_global_assignment -name VHDL_FILE RTL/X68KeplerX.vhd
-set_global_assignment -name SDC_FILE X68KeplerX.SDC
-set_global_assignment -name QIP_FILE RTL/mainpll.qip
-set_global_assignment -name SIGNALTAP_FILE stp1.stp
 set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_trigger_in[0] -to adpcm_req -section_id auto_signaltap_0
 set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_trigger_in[1] -to bus_mode[0] -section_id auto_signaltap_0
 set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_trigger_in[2] -to bus_mode[1] -section_id auto_signaltap_0
@@ -660,5 +583,72 @@ set_instance_assignment -name POST_FIT_CONNECT_TO_SLD_NODE_ENTITY_PORT crc[26] -
 set_instance_assignment -name POST_FIT_CONNECT_TO_SLD_NODE_ENTITY_PORT crc[27] -to auto_signaltap_0|vcc -section_id auto_signaltap_0
 set_instance_assignment -name POST_FIT_CONNECT_TO_SLD_NODE_ENTITY_PORT crc[29] -to auto_signaltap_0|vcc -section_id auto_signaltap_0
 set_instance_assignment -name POST_FIT_CONNECT_TO_SLD_NODE_ENTITY_PORT crc[31] -to auto_signaltap_0|vcc -section_id auto_signaltap_0
+set_global_assignment -name SYSTEMVERILOG_FILE RTL/submodules/hdmi/src/tmds_channel.sv
+set_global_assignment -name SYSTEMVERILOG_FILE RTL/submodules/hdmi/src/source_product_description_info_frame.sv
+set_global_assignment -name SYSTEMVERILOG_FILE RTL/submodules/hdmi/src/serializer.sv
+set_global_assignment -name SYSTEMVERILOG_FILE RTL/submodules/hdmi/src/packet_picker.sv
+set_global_assignment -name SYSTEMVERILOG_FILE RTL/submodules/hdmi/src/packet_assembler.sv
+set_global_assignment -name SYSTEMVERILOG_FILE RTL/submodules/hdmi/src/hdmi.sv
+set_global_assignment -name SYSTEMVERILOG_FILE RTL/submodules/hdmi/src/auxiliary_video_information_info_frame.sv
+set_global_assignment -name SYSTEMVERILOG_FILE RTL/submodules/hdmi/src/audio_sample_packet.sv
+set_global_assignment -name SYSTEMVERILOG_FILE RTL/submodules/hdmi/src/audio_info_frame.sv
+set_global_assignment -name SYSTEMVERILOG_FILE RTL/submodules/hdmi/src/audio_clock_regeneration_packet.sv
+set_global_assignment -name VHDL_FILE RTL/addsat.vhd
+set_global_assignment -name VHDL_FILE RTL/peripheral/e8255.vhd
+set_global_assignment -name VHDL_FILE RTL/ym2151/OPM_JT51.vhd
+set_global_assignment -name QIP_FILE RTL/adpcm/tbl6258.qip
+set_global_assignment -name VHDL_FILE RTL/adpcm/e6258.vhd
+set_global_assignment -name VHDL_FILE RTL/adpcm/calcadpcm.vhd
+set_global_assignment -name VHDL_FILE RTL/i2s_encoder.vhd
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/filter/jt51_sincf.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/filter/jt51_interpol.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/filter/jt51_fir8.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/filter/jt51_fir4.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/filter/jt51_fir_ram.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/filter/jt51_fir.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/filter/jt51_dac2.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_timers.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_sh.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_reg.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_pm.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_phrom.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_phinc_rom.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_pg.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_op.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_noise_lfsr.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_noise.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_mod.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_mmr.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_lin2exp.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_lfo.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_kon.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_exprom.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_exp2lin.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_eg.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_csr_op.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_csr_ch.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51_acc.v
+set_global_assignment -name VERILOG_FILE RTL/submodules/jt51/hdl/jt51.v
+set_global_assignment -name VHDL_FILE RTL/X68KeplerX.vhd
+set_global_assignment -name SDC_FILE X68KeplerX.SDC
+set_global_assignment -name QIP_FILE RTL/mainpll.qip
+set_global_assignment -name SIGNALTAP_FILE stp1.stp
+set_location_assignment PIN_R8 -to pClk50M
+set_location_assignment PIN_D3 -to pGPIO0_00
+set_location_assignment PIN_C3 -to pGPIO0_01
+set_location_assignment PIN_B3 -to pGPIO0_04
+set_location_assignment PIN_D5 -to pGPIO0_09
+set_instance_assignment -name IO_STANDARD LVDS_E_3R -to pGPIO0_HDMI_CLK
+set_instance_assignment -name IO_STANDARD LVDS_E_3R -to pGPIO0_HDMI_DATA0
+set_instance_assignment -name IO_STANDARD LVDS_E_3R -to pGPIO0_HDMI_DATA1
+set_instance_assignment -name IO_STANDARD LVDS_E_3R -to pGPIO0_HDMI_DATA2
+set_location_assignment PIN_B6 -to pGPIO0_HDMI_CLK
+set_location_assignment PIN_A6 -to "pGPIO0_HDMI_CLK(n)"
+set_location_assignment PIN_B5 -to pGPIO0_HDMI_DATA0
+set_location_assignment PIN_A5 -to "pGPIO0_HDMI_DATA0(n)"
+set_location_assignment PIN_B4 -to pGPIO0_HDMI_DATA1
+set_location_assignment PIN_A4 -to "pGPIO0_HDMI_DATA1(n)"
+set_location_assignment PIN_A3 -to pGPIO0_HDMI_DATA2
+set_location_assignment PIN_A2 -to "pGPIO0_HDMI_DATA2(n)"
 set_global_assignment -name SLD_FILE db/stp1_auto_stripped.stp
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
