--- a/X68KeplerX.qsf
+++ b/X68KeplerX.qsf
@@ -583,6 +583,23 @@ set_instance_assignment -name POST_FIT_CONNECT_TO_SLD_NODE_ENTITY_PORT crc[26] -
 set_instance_assignment -name POST_FIT_CONNECT_TO_SLD_NODE_ENTITY_PORT crc[27] -to auto_signaltap_0|vcc -section_id auto_signaltap_0
 set_instance_assignment -name POST_FIT_CONNECT_TO_SLD_NODE_ENTITY_PORT crc[29] -to auto_signaltap_0|vcc -section_id auto_signaltap_0
 set_instance_assignment -name POST_FIT_CONNECT_TO_SLD_NODE_ENTITY_PORT crc[31] -to auto_signaltap_0|vcc -section_id auto_signaltap_0
+set_location_assignment PIN_R8 -to pClk50M
+set_location_assignment PIN_D3 -to pGPIO0_00
+set_location_assignment PIN_C3 -to pGPIO0_01
+set_location_assignment PIN_B3 -to pGPIO0_04
+set_location_assignment PIN_D5 -to pGPIO0_09
+set_instance_assignment -name IO_STANDARD LVDS_E_3R -to pGPIO0_HDMI_CLK
+set_instance_assignment -name IO_STANDARD LVDS_E_3R -to pGPIO0_HDMI_DATA0
+set_instance_assignment -name IO_STANDARD LVDS_E_3R -to pGPIO0_HDMI_DATA1
+set_instance_assignment -name IO_STANDARD LVDS_E_3R -to pGPIO0_HDMI_DATA2
+set_location_assignment PIN_B6 -to pGPIO0_HDMI_CLK
+set_location_assignment PIN_A6 -to "pGPIO0_HDMI_CLK(n)"
+set_location_assignment PIN_B5 -to pGPIO0_HDMI_DATA0
+set_location_assignment PIN_A5 -to "pGPIO0_HDMI_DATA0(n)"
+set_location_assignment PIN_B4 -to pGPIO0_HDMI_DATA1
+set_location_assignment PIN_A4 -to "pGPIO0_HDMI_DATA1(n)"
+set_location_assignment PIN_A3 -to pGPIO0_HDMI_DATA2
+set_location_assignment PIN_A2 -to "pGPIO0_HDMI_DATA2(n)"
 set_global_assignment -name SYSTEMVERILOG_FILE RTL/submodules/hdmi/src/tmds_channel.sv
 set_global_assignment -name SYSTEMVERILOG_FILE RTL/submodules/hdmi/src/source_product_description_info_frame.sv
 set_global_assignment -name SYSTEMVERILOG_FILE RTL/submodules/hdmi/src/serializer.sv
@@ -633,22 +650,6 @@ set_global_assignment -name VHDL_FILE RTL/X68KeplerX.vhd
 set_global_assignment -name SDC_FILE X68KeplerX.SDC
 set_global_assignment -name QIP_FILE RTL/mainpll.qip
 set_global_assignment -name SIGNALTAP_FILE stp1.stp
-set_location_assignment PIN_R8 -to pClk50M
-set_location_assignment PIN_D3 -to pGPIO0_00
-set_location_assignment PIN_C3 -to pGPIO0_01
-set_location_assignment PIN_B3 -to pGPIO0_04
-set_location_assignment PIN_D5 -to pGPIO0_09
-set_instance_assignment -name IO_STANDARD LVDS_E_3R -to pGPIO0_HDMI_CLK
-set_instance_assignment -name IO_STANDARD LVDS_E_3R -to pGPIO0_HDMI_DATA0
-set_instance_assignment -name IO_STANDARD LVDS_E_3R -to pGPIO0_HDMI_DATA1
-set_instance_assignment -name IO_STANDARD LVDS_E_3R -to pGPIO0_HDMI_DATA2
-set_location_assignment PIN_B6 -to pGPIO0_HDMI_CLK
-set_location_assignment PIN_A6 -to "pGPIO0_HDMI_CLK(n)"
-set_location_assignment PIN_B5 -to pGPIO0_HDMI_DATA0
-set_location_assignment PIN_A5 -to "pGPIO0_HDMI_DATA0(n)"
-set_location_assignment PIN_B4 -to pGPIO0_HDMI_DATA1
-set_location_assignment PIN_A4 -to "pGPIO0_HDMI_DATA1(n)"
-set_location_assignment PIN_A3 -to pGPIO0_HDMI_DATA2
-set_location_assignment PIN_A2 -to "pGPIO0_HDMI_DATA2(n)"
-set_global_assignment -name SLD_FILE db/stp1_auto_stripped.stp
+set_global_assignment -name QIP_FILE RTL/subpll.qip
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name SLD_FILE db/stp1_auto_stripped.stp
