Change PLL. structure.

--- a/X68KeplerX.qsf
+++ b/X68KeplerX.qsf
@@ -327,6 +327,7 @@ set_location_assignment PIN_M10 -to pGPIO1[28]
 set_location_assignment PIN_L13 -to pGPIO1[29]
 set_location_assignment PIN_J16 -to pGPIO1[30]
 set_location_assignment PIN_K15 -to pGPIO1[31]
+set_location_assignment PIN_J13 -to pGPIO1[32]
 set_location_assignment PIN_J14 -to pGPIO1[33]
 set_location_assignment PIN_T9 -to pGPIO1_IN[0]
 set_location_assignment PIN_R9 -to pGPIO1_IN[1]
