--- a/X68KeplerX.qsf
+++ b/X68KeplerX.qsf
@@ -513,6 +513,7 @@ set_global_assignment -name SLD_NODE_PARAMETER_ASSIGNMENT "SLD_COUNTER_PIPELINE=
 set_global_assignment -name SLD_NODE_PARAMETER_ASSIGNMENT "SLD_ADVANCED_TRIGGER_ENTITY=basic,1," -section_id pcm_20debug
 set_global_assignment -name SLD_NODE_PARAMETER_ASSIGNMENT "SLD_TRIGGER_LEVEL_PIPELINE=1" -section_id pcm_20debug
 set_global_assignment -name SLD_NODE_PARAMETER_ASSIGNMENT "SLD_ENABLE_ADVANCED_TRIGGER=0" -section_id pcm_20debug
+set_global_assignment -name VHDL_FILE RTL/lib/i2s/i2s_decoder.vhd
 set_global_assignment -name VHDL_FILE RTL/lib/i2s/i2s_encoder.vhd
 set_global_assignment -name QIP_FILE RTL/pllpcm48k.qip
 set_global_assignment -name QIP_FILE RTL/pllpcm44k1.qip
@@ -645,5 +646,5 @@ set_global_assignment -name VHDL_FILE RTL/X68KeplerX.vhd
 set_global_assignment -name SDC_FILE X68KeplerX.SDC
 set_global_assignment -name SIGNALTAP_FILE stp1.stp
 set_global_assignment -name QIP_FILE RTL/pllsys.qip
-set_global_assignment -name SLD_FILE db/stp1_auto_stripped.stp
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name SLD_FILE db/stp1_auto_stripped.stp
