--- a/GreenPAK/fpga-writer/Eclipse/GreenPAKWriter_BSP/Makefile
+++ b/GreenPAK/fpga-writer/Eclipse/GreenPAKWriter_BSP/Makefile
@@ -237,6 +237,13 @@ altera_avalon_jtag_uart_driver_C_LIB_SRCS := \
 altera_avalon_pio_driver_SRCS_ROOT := drivers
 
 # altera_avalon_pio_driver sources 
+# altera_avalon_sysid_qsys_driver sources root 
+altera_avalon_sysid_qsys_driver_SRCS_ROOT := drivers
+
+# altera_avalon_sysid_qsys_driver sources 
+altera_avalon_sysid_qsys_driver_C_LIB_SRCS := \
+	$(altera_avalon_sysid_qsys_driver_SRCS_ROOT)/src/altera_avalon_sysid_qsys.c
+
 # altera_msgdma_driver sources root 
 altera_msgdma_driver_SRCS_ROOT := drivers
 
@@ -346,6 +353,7 @@ COMPONENT_C_LIB_SRCS += \
 	$(altera_avalon_fifo_driver_C_LIB_SRCS) \
 	$(altera_avalon_i2c_driver_C_LIB_SRCS) \
 	$(altera_avalon_jtag_uart_driver_C_LIB_SRCS) \
+	$(altera_avalon_sysid_qsys_driver_C_LIB_SRCS) \
 	$(altera_msgdma_driver_C_LIB_SRCS) \
 	$(altera_nios2_gen2_hal_driver_C_LIB_SRCS) \
 	$(hal_C_LIB_SRCS)
