--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 db/
 incremental_db/
 *.bak
+GreenPAK/fpga-writer/QuartusII/software/GreenPAKWriter/._.DS_Store
+GreenPAK/fpga-writer/QuartusII/software/GreenPAKWriter/.DS_Store
