--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "RTL/submodules/jt51"]
-	path = RTL/submodules/jt51
-	url = https://github.com/jotego/jt51.git
 [submodule "RTL/submodules/hdmi"]
 	path = RTL/submodules/hdmi
 	url = https://github.com/hdl-util/hdmi.git
@@ -16,3 +13,6 @@ url=https://github.com/kunichiko/sdram-controller.git
 [submodule "RTL/submodules/vga-text-mode"]
 	path = RTL/submodules/vga-text-mode
 url=https://github.com/kunichiko/vga-text-mode.git
+[submodule "RTL/submodules/ikaopm"]
+	path = RTL/submodules/ikaopm
+	url = https://github.com/ika-musume/IKAOPM.git
