--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/hdl-util/hdmi.git
 [submodule "RTL/mercury/jt12"]
 	path = RTL/mercury/jt12
-	url = https://github.com/jotego/jt12.git
+url=git@github.com:kunichiko/jt12_2608.git
 [submodule "RTL/submodules/sdram-controller"]
 	path = RTL/submodules/sdram-controller
 url=https://github.com/kunichiko/sdram-controller.git
