--- a/X68KeplerX.qsf
+++ b/X68KeplerX.qsf
@@ -402,6 +402,8 @@ set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to pGPIO1[24]
 set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to pGPIO1[25]
 set_global_assignment -name VERILOG_SHOW_LMF_MAPPING_MESSAGES OFF
 set_global_assignment -name VERILOG_MACRO "IKAOPM_BUSY_FLAG_ENABLE=<None>"
+set_global_assignment -name VHDL_FILE RTL/ym2151/OPM_JT51.vhd
+set_global_assignment -name QIP_FILE RTL/submodules/jt51/hdl/jt51.qip
 set_global_assignment -name VHDL_FILE RTL/mercury/opna_adpcm_rom.vhd
 set_global_assignment -name VERILOG_FILE RTL/submodules/ikaopm/HDL/IKAOPM_modules/IKAOPM_timinggen.v
 set_global_assignment -name VERILOG_FILE RTL/submodules/ikaopm/HDL/IKAOPM_modules/IKAOPM_timer.v
