--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@ url=https://github.com/kunichiko/sdram-controller.git
 [submodule "RTL/submodules/ikaopm"]
 	path = RTL/submodules/ikaopm
 	url = https://github.com/ika-musume/IKAOPM.git
+[submodule "CH32v003/ch32v003fun"]
+	path = CH32v003/ch32v003fun
+	url = https://github.com/cnlohr/ch32v003fun.git
