--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@ url=https://github.com/kunichiko/sdram-controller.git
 [submodule "CH32v003/ch32v003fun"]
 	path = CH32v003/ch32v003fun
 	url = https://github.com/cnlohr/ch32v003fun.git
+[submodule "RTL/submodules/ese-vdp"]
+	path = RTL/submodules/ese-vdp
+	url = https://github.com/kunichiko/ese-vdp.git
